# spc

./: DESCRIPTION.rst  README.md  Readme.md  config  config.json  dashboard_api.md  install.py  pyproject.toml  setup.py  spc_data_buffer_sheet.md
example/: buzzer_test.py  full_print.py  read_all.py  read_individual.py  read_rtc.py  set_power_off_percentage.py  set_rtc.py  set_shutdown_battery_percentage.py  set_shutdown_percentage.py
spc/: __init__.py  config.py  configtxt.py  database.py  devices.py  ha_api.py  i2c.py  logger.py  oled.py  spc.py  system_status.py  utils.py  version.py  ws2812.py
spc/scripts/: auto.py  dashboard.py  data_logger.py  mqtt_client.py  rtc.py
test/: full_print_plus.py  test_argparse.py
