[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spc"
authors = [
  { name="SunFounder", email="service@sunfounder.com" },
]
description = "Library for Sunfounder Power Control"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU License",
  "Operating System :: OS Independent",
]
dynamic = ["version"]

[dependencies]
python = "^3.9"
paho-mqtt = "^1.6.1"
smbus2 = "^0.4.3"
requests = "^2.26.0"
smbus2 = "^0.4.1"
rpi_ws281x = "^1.4.0"
pillow = { version = "^8.4.0", extras = ["jpeg:disable"] }
psutil = "^5.8.0"

[tool.setuptools]
packages = ["spc", "spc.scripts"]

[project.urls]
"Homepage" = "https://github.com/sunfounder/spc"
"Bug Tracker" = "https://github.com/sunfounder/spc/issues"

[project.scripts]
spc = "spc:main"
spc_auto = "spc.scripts.auto:main"
spc_dashboard = "spc.scripts.dashboard:main"
spc_mqtt_client = "spc.scripts.mqtt_client:main"
spc_rtc = "spc.scripts.rtc:main"


[tool.setuptools.dynamic]
version = {attr = "spc.__version__"}