[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spc"
authors = [
  { name="SunFounder", email="service@sunfounder.com" },
]
description = "Library for Sunfounder Power Control"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU License",
  "Operating System :: OS Independent",
]
dynamic = ["version"]

dependencies = [
  'smbus2',
]

[tool.setuptools]
packages = ["spc"]

[project.urls]
"Homepage" = "https://github.com/sunfounder/spc"
"Bug Tracker" = "https://github.com/sunfounder/spc/issues"

[project.scripts]
spc = "spc:main"

[tool.setuptools.dynamic]
version = {attr = "spc.__version__"}